--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RoomChat</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitcount+Single:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="label">ANONIMITY</h1>
+        <form class="login_form">
+            <div class="font">enter your alias</div>
+            <input type="text" name="" id="">
+            <div class="font font2">Password</div>
+            <input type="password">
+            <button type="submit">GETIN</button>
+        </form>
+    </div>
 
 
 
